test/argo-gateways/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argo-gateway
  namespace: argo
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: argo.local
      allowedRoutes:
        namespaces:
          from: Same
